--- a/.github/workflows/be-docker-buildx-ci.yml
+++ b/.github/workflows/be-docker-buildx-ci.yml
@@ -21,6 +21,12 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       -
+        name: Assume IAM role
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-role-to-assume: ${{ secrets.AWS_ROLE }}
+          aws-region: ${{ secrets.AWS_REGION }}
+      -
         name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -32,5 +38,5 @@ jobs:
         with:
           push: true
           context: ./chatty-be
-          tags: leahpar0401/wequiz-be:latest
+          tags: cherry031/test
           platforms: linux/arm64
