--- a/.github/workflows/be-docker-buildx-ci.yml
+++ b/.github/workflows/be-docker-buildx-ci.yml
@@ -24,7 +24,7 @@ jobs:
         name: Assume IAM role
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-role-to-assume: ${{ secrets.AWS_ROLE }}
+          role-to-assume: ${{ secrets.AWS_ROLE }}
           aws-region: ${{ secrets.AWS_REGION }}
       -
         name: Login to Docker Hub
