--- a/.github/workflows/be-docker-buildx-ci.yml
+++ b/.github/workflows/be-docker-buildx-ci.yml
@@ -24,7 +24,8 @@ jobs:
         name: Assume IAM role
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          role-to-assume: ${{ secrets.AWS_ROLE }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
       -
         name: Login to Docker Hub
