--- a/chatty-be/build.gradle
+++ b/chatty-be/build.gradle
@@ -42,6 +42,10 @@ dependencies {
 
     implementation 'mysql:mysql-connector-java:8.0.23'
 
+    implementation("io.awspring.cloud:spring-cloud-starter-aws-secrets-manager-config:2.4.4")
+    implementation platform('com.amazonaws:aws-java-sdk-bom:1.11.1000')
+    implementation 'com.amazonaws:aws-java-sdk-dynamodb'
+
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
