--- a/chatty-be/src/main/resources/application.yml
+++ b/chatty-be/src/main/resources/application.yml
@@ -19,3 +19,11 @@ jwt:
   secret: qwerasdfzxcvdsafdsaffdasafdfdsafdsafdsafdsasfda
   access-token-expiration: 86400000
   refresh-token-expiration: 2592000000
+
+aws:
+  config:
+    import: 'aws-secretsmanager:wequiz/aws/back'
+  key:
+    access-key: ${AWS_ACCESS_KEY}
+    secret-access-key: ${AWS_SECRET_ACCESS_KEY}
+    region: 'ap-northeast-2'
